@@ -227,3 +227,9 @@ added classes AffyExonPDInfo and AffySTPDInfo
 04-03-2010 - R. Scharpf (1.9.52)
 
 ** added a few Rd files
+
+04-04-2010 - R. Scharpf (1.9.53)
+
+** addFeatureAnnotation.crlmm provides a warning rather than perform a
+   subset operation on the eSet object.  Subset operations are
+   dangerous with ff objects
